cmake_minimum_required(VERSION 3.14)
project(5_template_examples)

set(CMAKE_CXX_STANDARD 14)

add_executable(1-value-template-arguments 1-value-template-arguments.cpp)
add_executable(2-function-templates 2-function-templates.cpp)
add_executable(3-generic-accumulate-example 3-generic-accumulate-example.cpp)
