cmake_minimum_required(VERSION 3.14)
project(5_template_examples)

set(CMAKE_CXX_STANDARD 14)

add_executable(1-value-template-arguments 1-value-template-arguments.cpp)
add_executable(2-function-templates 2-function-templates.cpp)
add_executable(3-generic-accumulate-example 3-generic-accumulate-example.cpp)
add_executable(4-functors 4-functors.cpp)
add_executable(5-functors-with-STL 5-functors-with-STL.cpp)
add_executable(6-lambda-functions 6-lambda-functions.cpp)
add_executable(7-lambda-functions 7-lambda-functions.cpp)
add_executable(8-lambda-functions 8-lambda-functions.cpp)
add_executable(9-lambda-functions 9-lambda-functions.cpp)
add_executable(10-lambda-functions 10-lambda-functions.cpp)
add_executable(11-lambda-functions 11-lambda-functions.cpp)
add_executable(12-lambda-functions 12-lambda-functions.cpp)
